# docs/openapi.json
@@ -871,6 +871,12 @@
                       "employeeName": {
                         "type": "string"
                       },
+                      "totalHours": {
+                        "type": "number"
+                      },
+                      "totalFlatRate": {
+                        "type": "number"
+                      },
                       "hourly": {
                         "type": "array",
                         "items": {
